--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "arceos"]
 	path = arceos
-	url = git@github.com:langqiuyi-77/arceos.git
+	url = https://github.com/langqiuyi-77/arceos.git
